--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,118 @@
-#clockreg
+#timestuff
 {
-    background-color: brown;
+    margin: 10px;
+    text-align: center;
 }
+#clockbox1
+{
+    position: absolute;
+    height: 50px;
+    width: 150px;
+    background-color: red;
+    top: 100px;
+    left: 250px;
+    text-align: center;
+    font-size: 35px;
+    font-style: Georgia, serif;
+}
+#clockbox2
+{
+    position: absolute;
+    height: 50px;
+    width: 150px;
+    top: 100px;
+    left: 550px;
+    background-color: #E939A6;
+    text-align: center;
+    font-size: 35px;
+    font-style: Georgia, serif;
+}
+#clockbox3
+{
+    position: absolute;
+    height: 50px;
+    width: 150px;
+    top: 100px;
+    left: 850px;
+    background-color: green;
+    text-align: center;
+    font-size: 35px;
+    font-style: Georgia, serif;
+}
+#image1
+{
+    position: absolute;
+    visibility: visible;
+    left: 20px;
+    top: 20px;
+    height: 600px;
+    width: 100%;
+    opacity: 0.7;
+    z-index: -1;
+}
+.menu
+{
+    width: 100%;
+    height: 20px;
+    justify-content: center;
+    opacity: 0.8;
+    padding: 1px 10px;
+    margin: 2px;
+    text-align: center;
+    display: flex;
+    left: 10px;
+    letter-spacing: 0.2em;
+    line-spacing: 2em;
+    /*flex-direction: row;*/
+}
+.menu-sub
+{
+    height: 30px;
+    width: 100%;
+    border: 50px blue;
+    font-size: 15px;
+    padding: 10px;
+    margin: 2px 2px 2px 2px;
+    color: black;
+}
+#hour
+{
+    position: absolute;
+    padding: 5px;
+    left: 290px;
+}
+#minute
+{
+    position: absolute;
+    padding: 5px;
+    left: 590px;
+}
+#second
+{
+    position: absolute;
+    padding: 5px;
+    left: 890px;
+}
+/*.menu-sub > a
+{
+    float: left;
+    display: block;
+    margin: 5px 106px;
+    padding: 2px;
+    color: yellow;
+    font-style: bold;
+    border: 5px blue;
+}*/
+/*//==ARCHIVE==//*/
+/*#clockreg
+{
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    background-color: gold;
+    text-align: center;
+    font-style: bold;
+    font-size: 40px;
+    letter-spacing: 0.1em;
+    left: 50px;
+}*/
