--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,10 @@
 {
     position: absolute;
     visibility: visible;
-    left: 20px;
-    top: 20px;
-    height: 600px;
-    width: 100%;
+    left: 280px;
+    top: 25px;
+    height: 100%;
+    width: auto;
     opacity: 0.7;
     z-index: -1;
 }
